--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "aia_cortex_nlu"}]
 
 [tool.poetry.dependencies]
-python = ">=3.11.4,<3.12"
+python = ">=3.11.2,<3.12"
 wheel = "0.41.3"
 openai = "^0.28.1"
 confluent-kafka = "2.3.0"
@@ -16,14 +16,13 @@ pandas = "2.1.2"
 simplenlg = "0.2.0"
 python-dotenv = "^1.0.0"
 pyyaml = "^6.0.1"
-
-[tool.poetry.group.dev]
-optional = true
+numpy = "^1.26.2"
+coverage = "^7.3.2"
 
 [tool.pytest.ini_options]
 pythonpath = "aia_cortex_nlu"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
 pytest-dotenv = "^0.5.2"
 pytest-cov = "^4.0.0"
