--- a/resources/log_cfg.yaml
+++ b/resources/log_cfg.yaml
@@ -19,7 +19,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: DEBUG
         formatter: simple
-        filename: application.log
+        filename: target/logs/application.log
         maxBytes: 10485760 # 10MB
         backupCount: 5
         encoding: utf8
