--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "aia-cortex-nlu"
-version = "0.2.0"
+version = "0.2.1-alpha-1"
 description = "Natural Language Processor"
-authors = ["Edgar Rodrigo Sanchez De Gracia <edgr.sanchez@mercadolibre.cl>"]
+authors = ["Edgar Rodrigo Sanchez De Gracia <grineldosanchez@yahoo.es>"]
 readme = "README.md"
-packages = [{include = "aia_cortex_nlu"}, {include = "kafka"}, {include = "logs"}, {include = "repositories"}]
+packages = [{include = "aia_cortex_nlu"}]
 
 [tool.poetry.dependencies]
 python = ">=3.11.2,<3.12"
