--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aia-cortex-nlu"
-version = "0.3.1"
+version = "0.3.2"
 description = "Natural Language Processor"
 authors = ["Edgar Rodrigo Sanchez De Gracia <grineldosanchez@yahoo.es>"]
 readme = "README.md"
@@ -19,9 +19,9 @@ coverage = "^7.3.2"
 spacy = "^3.7.2"
 es-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0.tar.gz"}
 nltk = "^3.8.1"
-aia-utils = "^0.1.8"
 graphviz = "^0.20.1"
 pydot = "^2.0.0"
+aia-utils = {path = "../aia-utils"}
 
 [tool.pytest.ini_options]
 pythonpath = "aia_cortex_nlu"
