--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ es-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/dow
 nltk = "^3.8.1"
 graphviz = "^0.20.1"
 pydot = "^2.0.0"
-aia-utils = "^0.1.12"
+aia_utils = "^0.2.1"
 
 [tool.pytest.ini_options]
 pythonpath = "aia_cortex_nlu"
