--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aia-cortex-nlu"
-version = "0.4.0"
+version = "0.4.2"
 description = "Natural Language Processor"
 authors = ["Edgar Rodrigo Sanchez De Gracia <grineldosanchez@yahoo.es>"]
 readme = "README.md"
@@ -21,12 +21,12 @@ es-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/dow
 nltk = "^3.8.1"
 graphviz = "^0.20.1"
 pydot = "^2.0.0"
-aia_utils = "^0.3.1"
 tensorflow = "2.16.2"
 torch = "2.2.2"
 transformers = "4.42.0"
 accelerate = "^0.33.0"
 tf-keras = "2.16.0"
+aia_utils = "0.3.2"
 
 [tool.pytest.ini_options]
 pythonpath = "aia_cortex_nlu"
